[tool.poetry]
name = "cocktail-database"
version = "0.1.0"
description = "a little cocktail recipe webapp"
authors = ["Chris DiCaprio <christopher.dicaprio@gmail.com>"]
readme = "README.md"
packages = [
	{include = "cocktail_database"},
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
streamlit = "^1.41.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.14.0"
flake8 = "^7.1.1"
black = "^24.10.0"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
